Fixed problem on mobile (#15)

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -434,7 +434,7 @@ h6,
 
   .h1,
   h1 {
-    font-size: 2.827rem;
+    font-size: 2.0rem;
   }
 
   .h2,
